--- a/src/main/resources/templates/Schedule.html
+++ b/src/main/resources/templates/Schedule.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>여행 일정</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiPpnAj0XSUTz5QaALJ4iYWA0xEaGWIr8"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=secret"></script>
   <link rel="stylesheet" href="/css/ScheduleCss.css">
   <script th:inline="javascript">
     function initMap() {
