--- a/src/main/resources/templates/Map.html
+++ b/src/main/resources/templates/Map.html
@@ -120,7 +120,7 @@
     }
 
     // API 로드 함수 호출
-    loadScript("https://maps.googleapis.com/maps/api/js?key=AIzaSyAiPpnAj0XSUTz5QaALJ4iYWA0xEaGWIr8&callback=initMap&libraries=places");
+    loadScript("https://maps.googleapis.com/maps/api/js?key=secret&callback=initMap&libraries=places");
 </script>
 </body>
 </html>
